--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5", // ou "es6" si tu préfères
+		"target": "ES2015", // ou "es6" si tu préfères
 		"module": "esnext",
 		"moduleResolution": "node",
 		"outDir": "./dist", // Le dossier où le JS compilé sera généré
